# microgrid-mentor

./: .gitignore  .replit  Pasted---1733380806436.txt  package-lock.json  package.json  pyproject.toml  replit.nix
backend/: database.py  main.py  models.py  schemas.py
client/: package-lock.json  package.json  vite.config.ts
client/src/: main.tsx
client/src/components/: AICoach.tsx  Canvas.tsx  ComponentPalette.tsx  DesignManager.tsx  PowerSpecsMenu.tsx  PowerSummaryPanel.tsx  ProductPanel.tsx
client/src/lib/: canvas-utils.ts  components.ts  power-utils.ts
client/src/pages/: ProductDetails.tsx  Whiteboard.tsx
db/: schema.ts
server/: ai-coach.ts  index.ts  routes.ts
